Bug 418386 - No support for searching messages in sequence diagrams
Summary: No support for searching messages in sequence diagrams
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.30.2 (KDE releases 19.12.2)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-03-02 07:12 UTC by Ralf Habacker
Modified: 2020-03-02 07:31 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.30.80 (KDE releases 20.03.80)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2020-03-02 07:12:24 UTC
STEPS TO REPRODUCE
1. start umbrello
2. add sequence diagram
3. add synchronous message with custom text "new_operation"
4. select menu->edit->find or press CTRL-F
5. select current diagram and enter "operation"

OBSERVED RESULT
The message is not found 

EXPECTED RESULT
The message should be found

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE_Leap 15.1
KDE Frameworks Version: 5.49.0
Qt Version: 5.9.7
Comment 1 Ralf Habacker 2020-03-02 07:31:28 UTC
Git commit 8080caad139255f8ea7fae447da63e65f6fabc43 by Ralf Habacker.
Committed on 02/03/2020 at 07:31.
Pushed by habacker into branch 'master'.

Fix 'No support for searching messages in sequence diagrams'
FIXED-IN:2.30.80 (KDE releases 20.03.80)

M  +10   -0    umbrello/finder/umlscenefinder.cpp

https://invent.kde.org/kde/umbrello/commit/8080caad139255f8ea7fae447da63e65f6fabc43