Fix 'No support for searching messages in sequence diagrams'

BUG:418386
FIXED-IN:2.30.80 (KDE releases 20.03.80)